// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`browser Event #decorateBody returns a decorated HTML string 1`] = `
"<div class=\\"timeline-comment-wrapper js-probot-ui\\">
      <div class=\\"Box p-3 d-flex\\">
        <div class=\\"mr-2 tooltipped tooltipped-n\\" aria-label=\\"my-dope-app[bot]\\">
          <img src=\\"https://image.com/image.png\\" class=\\"avatar avatar-small\\" width=\\"22\\" height=\\"22\\" />
        </div>
        <div>Hello!</div>
      </div>
    </div>"
`;

exports[`browser Event #render injects the event after the op 1`] = `
<div
  class="timeline-comment-wrapper js-probot-ui"
>
  
      
  <div
    class="Box p-3 d-flex"
  >
    
        
    <div
      aria-label="my-app[bot]"
      class="mr-2 tooltipped tooltipped-n"
    >
      
          
      <img
        class="avatar avatar-small"
        height="22"
        src="https://image.com/image.png"
        width="22"
      />
      
        
    </div>
    
        
    <div>
      Hello!
    </div>
    
      
  </div>
  
    
</div>
`;

exports[`browser Event #render injects the event after the op 2`] = `
"<div class=\\"timeline\\">
        <div class=\\"timeline-comment-wrapper\\">
          <textarea class=\\"comment-form-textarea\\">            Hello!

            &lt;!-- probot = {\\"123\\":{\\"events\\":[{\\"after\\":null,\\"body\\":\\"&lt;div&gt;You opened an issue!&lt;/div&gt;\\",\\"avatarUrl\\":\\"https://avatars2.githubusercontent.com/in/10739?v=4\\",\\"login\\":\\"super-duper-dev[bot]\\"}]}} --&gt;
          </textarea>
        </div><div class=\\"timeline-comment-wrapper js-probot-ui\\">
      <div class=\\"Box p-3 d-flex\\">
        <div class=\\"mr-2 tooltipped tooltipped-n\\" aria-label=\\"my-app[bot]\\">
          <img src=\\"https://image.com/image.png\\" class=\\"avatar avatar-small\\" width=\\"22\\" height=\\"22\\">
        </div>
        <div>Hello!</div>
      </div>
    </div>
      </div>"
`;

exports[`browser go does nothing if there are no events 1`] = `
"<div class=\\"timeline\\">
        <div class=\\"timeline-comment-wrapper\\">
          <textarea class=\\"comment-form-textarea\\">            Hello!
            &lt;!-- probot = {\\"123\\":{\\"test\\":true}} --&gt;
          </textarea>
        </div>
      </div>"
`;

exports[`browser go injects an event 1`] = `
<div
  class="timeline-comment-wrapper js-probot-ui"
>
  
      
  <div
    class="Box p-3 d-flex"
  >
    
        
    <div
      aria-label="super-duper-dev[bot]"
      class="mr-2 tooltipped tooltipped-n"
    >
      
          
      <img
        class="avatar avatar-small"
        height="22"
        src="https://avatars2.githubusercontent.com/in/10739?v=4"
        width="22"
      />
      
        
    </div>
    
        
    <div>
      <div>
        You opened an issue!
      </div>
    </div>
    
      
  </div>
  
    
</div>
`;

exports[`browser go injects an event 2`] = `
"<div class=\\"timeline\\">
        <div class=\\"timeline-comment-wrapper\\">
          <textarea class=\\"comment-form-textarea\\">            Hello!

            &lt;!-- probot = {\\"123\\":{\\"events\\":[{\\"after\\":null,\\"body\\":\\"&lt;div&gt;You opened an issue!&lt;/div&gt;\\",\\"avatarUrl\\":\\"https://avatars2.githubusercontent.com/in/10739?v=4\\",\\"login\\":\\"super-duper-dev[bot]\\"}]}} --&gt;
          </textarea>
        </div><div class=\\"timeline-comment-wrapper js-probot-ui\\">
      <div class=\\"Box p-3 d-flex\\">
        <div class=\\"mr-2 tooltipped tooltipped-n\\" aria-label=\\"super-duper-dev[bot]\\">
          <img src=\\"https://avatars2.githubusercontent.com/in/10739?v=4\\" class=\\"avatar avatar-small\\" width=\\"22\\" height=\\"22\\">
        </div>
        <div><div>You opened an issue!</div></div>
      </div>
    </div>
      </div>"
`;

exports[`browser renderEvents renders an event to the DOM 1`] = `
<div
  class="timeline-comment-wrapper js-probot-ui"
>
  
      
  <div
    class="Box p-3 d-flex"
  >
    
        
    <div
      aria-label="super-duper-dev[bot]"
      class="mr-2 tooltipped tooltipped-n"
    >
      
          
      <img
        class="avatar avatar-small"
        height="22"
        src="https://avatars2.githubusercontent.com/in/10739?v=4"
        width="22"
      />
      
        
    </div>
    
        
    <div>
      <div>
        You opened an issue!
      </div>
    </div>
    
      
  </div>
  
    
</div>
`;

exports[`browser renderEvents renders an event to the DOM 2`] = `
"<div class=\\"timeline\\">
        <div class=\\"timeline-comment-wrapper\\">
          <textarea class=\\"comment-form-textarea\\">            Hello!

            &lt;!-- probot = {\\"123\\":{\\"events\\":[{\\"after\\":null,\\"body\\":\\"&lt;div&gt;You opened an issue!&lt;/div&gt;\\",\\"avatarUrl\\":\\"https://avatars2.githubusercontent.com/in/10739?v=4\\",\\"login\\":\\"super-duper-dev[bot]\\"}]}} --&gt;
          </textarea>
        </div><div class=\\"timeline-comment-wrapper js-probot-ui\\">
      <div class=\\"Box p-3 d-flex\\">
        <div class=\\"mr-2 tooltipped tooltipped-n\\" aria-label=\\"super-duper-dev[bot]\\">
          <img src=\\"https://avatars2.githubusercontent.com/in/10739?v=4\\" class=\\"avatar avatar-small\\" width=\\"22\\" height=\\"22\\">
        </div>
        <div><div>You opened an issue!</div></div>
      </div>
    </div>
      </div>"
`;
